fix footer spacing & bullet point positioning on prices page

--- a/slideshow.css
+++ b/slideshow.css
@@ -93,8 +93,7 @@
     }
 }
 
-#comms li {
-    list-style-type: square;
-}
+#comms ul {list-style-position: inside}
+#comms li {list-style-type: square;}
 
 
